--- a/love.html
+++ b/love.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>给赵瑾的旅行回忆录</title>
+    <title>给赵瑾</title>
     <style>
         /* 基础样式 */
         :root {
@@ -103,13 +103,13 @@
             <p>我们没有久居异地，但我的思念和爱意不会随着时间淡去，在共同度过的时间里，生活充满了无法言喻的可能性。如加缪笔下的故事一般，每一次的攀登都是追逐着一种超越日常的存在。</p>
         </div>
 
-        <div class="photo-wall">
-            <img src="3d14c32f22120df08506991b2091e01.jpg">
-            <img src="50c88a5df01456fddc91ba09d59da5d.jpg">
-            <img src="4931770cb13db72b05dcf5a064d0fd0.jpg">
-            <img src="a823534214fb1c2dde1941ad187fa83.jpg">
-            <img src="b4fdaade8e68cfb9f247a888240c8e2.jpg">
-            <img src="bca80986352b3ea9a52d324d1aae0fe.jpg">
+       <div class="photo-wall">
+            <img src="https://raw.githubusercontent.com/fandunjin/zhaojin/main/3d14c32f22120df08506991b2091e01.jpg" alt="在福鼎探店">
+            <img src="https://raw.githubusercontent.com/fandunjin/zhaojin/main/50c88a5df01456fddc91ba09d59da5d.jpg" alt="在平潭拉丁车">
+            <img src="https://raw.githubusercontent.com/fandunjin/zhaojin/main/4931770cb13db72b05dcf5a064d0fd0.jpg" alt="在贵安动物园">
+            <img src="https://raw.githubusercontent.com/fandunjin/zhaojin/main/a823534214fb1c2dde1941ad187fa83.jpg" alt="在贵安温泉">
+            <img src="https://raw.githubusercontent.com/fandunjin/zhaojin/main/b4fdaade8e68cfb9f247a888240c8e2.jpg" alt="在公交臭美">
+            <img src="https://raw.githubusercontent.com/fandunjin/zhaojin/main/bca80986352b3ea9a52d324d1aae0fe.jpg" alt="在古城化妆">
         </div>
     </div>
 
