--- a/love.html
+++ b/love.html
@@ -115,6 +115,9 @@
     <div id="petals-container"></div>
     <div class="timer">
         <h2>❤️ 爱赵瑾 ❤️</h2>
+        <p>今天去北京了哈，我要看第一手照片！！！</p>
+        <p>今天去北京了哈，我要看第一手照片！！！</p>
+        <p>今天去北京了哈，我要看第一手照片！！！</p>
         <p>我们已经相爱：<span id="loveDays">0</span> 天</p>
     </div>
 
