--- a/love.html
+++ b/love.html
@@ -115,10 +115,9 @@
     <div id="petals-container"></div>
     <div class="timer">
         <h2>❤️ 爱赵瑾 ❤️</h2>
-        <p>今天是去北京的第三天</p>
-        <p>赵瑾得了肠胃炎</p>
-        <p>落枕还没好</p>
-        <p>心疼</p>
+        <p>今天是去北京的第四天</p>
+        <p>希望赵瑾的肠胃炎快点好</p>
+        <p>相信我们是正缘</p>
         <p>我们已经相爱：<span id="loveDays">0</span> 天</p>
     </div>
 
