--- a/love.html
+++ b/love.html
@@ -115,9 +115,8 @@
     <div id="petals-container"></div>
     <div class="timer">
         <h2>❤️ 爱赵瑾 ❤️</h2>
-        <p>今天是去北京的最后一天</p>
-        <p>去一趟北京遭老罪了</p>
-        <p>可伶的宝宝</p>
+        <p>还有5天就见面啦</p>
+        <p>耶耶耶！！！</p>
         <p>我们已经相爱：<span id="loveDays">0</span> 天</p>
     </div>
 
