--- a/gallery.html
+++ b/gallery.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>照片墙</title>
+    <title>我们的好多合照</title>
     <style>
         /* Shared styles (same as index.html) */
         :root {
@@ -69,10 +69,10 @@
 <body>
     <!-- Navigation Bar -->
     <nav class="nav">
-        <a href="index.html">首页</a>
-        <a href="gallery.html">照片墙</a>
-        <a href="video.html">视频</a>
-        <a href="notes.html">留言板</a>
+        <a href="index.html">Home Page</a>
+        <a href="gallery.html">我们的合照</a>
+        <a href="video.html">看看我们的video</a>
+        <a href="notes.html">赵瑾到此一游？</a>
     </nav>
 
     <div class="photo-wall">
