--- a/love.html
+++ b/love.html
@@ -115,8 +115,10 @@
     <div id="petals-container"></div>
     <div class="timer">
         <h2>❤️ 爱赵瑾 ❤️</h2>
-        <p>还有5天就见面啦</p>
-        <p>耶耶耶！！！</p>
+        <p>↓↓走过路过别错过↓↓</p>
+        <p>https://fandunjin.github.io/zhaojin/login.html</p>
+        <p>https://fandunjin.github.io/zhaojin/login.html</p>
+        <p>https://fandunjin.github.io/zhaojin/login.html</p>
         <p>我们已经相爱：<span id="loveDays">0</span> 天</p>
     </div>
 
