--- a/index.html
+++ b/index.html
@@ -283,10 +283,10 @@
 
     <!-- Navigation Bar -->
     <nav class="nav">
-        <a href="index.html">首页</a>
-        <a href="gallery.html">照片墙</a>
-        <a href="video.html">视频</a>
-        <a href="notes.html">留言板</a>
+        <a href="index.html">Home Page</a>
+        <a href="gallery.html">看看我们的合照吧</a>
+        <a href="video.html">video噢</a>
+        <a href="notes.html">先看合照去</a>
     </nav>
 
     <!-- Scrollable Content -->
@@ -295,6 +295,9 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
+                <p>我爱你</p>
+                <p>赵瑾，我想给你满满的安全感，我想给你所有的一切</p>
+                <p>请你相信我</p>
                 <p>我爱你</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
