--- a/video.html
+++ b/video.html
@@ -56,16 +56,15 @@
 <body>
     <!-- Navigation Bar -->
     <nav class="nav">
-        <a href="index.html">首页</a>
-        <a href="gallery.html">照片墙</a>
-        <a href="video.html">视频</a>
-        <a href="notes.html">留言板</a>
+        <a href="index.html">Home Page</a>
+        <a href="gallery.html">Photo Wall</a>
+        <a href="video.html">你在看视频呀！</a>
+        <a href="notes.html">到此一游了吗</a>
     </nav>
 
     <div class="video-container">
         <video controls preload="metadata" width="640" height="360">
             <source src="https://github.com/fandunjin/zhaojin/raw/main/06d7a3887fdc2e0d25c5aec047ece9fa.mp4" type="video/mp4">
-            您的浏览器不支持 video 标签。
         </video>
     </div>
 </body>
