--- a/notes.html
+++ b/notes.html
@@ -4,6 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>留言板</title>
+    <!-- Firebase SDK -->
+    <script src="https://www.gstatic.com/firebasejs/9.15.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.15.0/firebase-database.js"></script>
+    <script>
+        // Firebase 配置
+        const firebaseConfig = {
+  apiKey: "AIzaSyDDbbkKJg44CbnJnf9QiRkZFaXgACQTFZo",
+  authDomain: "zhaojin-22daa.firebaseapp.com",
+  projectId: "zhaojin-22daa",
+  storageBucket: "zhaojin-22daa.firebasestorage.app",
+  messagingSenderId: "434516450892",
+  appId: "1:434516450892:web:df69d50ec6267ce4545ee9",
+  measurementId: "G-JKVVR1PR9C"
+        };
+        // 初始化 Firebase
+        firebase.initializeApp(firebaseConfig);
+        const db = firebase.database();
+        const messagesRef = db.ref('messages');
+    </script>
     <style>
         /* 页面样式 */
         body {
@@ -70,16 +89,6 @@
             margin-bottom: 1rem;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
-
-        .delete-button {
-            margin-top: 0.5rem;
-            padding: 0.3rem 0.6rem;
-            background: red;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
     </style>
 </head>
 <body>
@@ -89,6 +98,7 @@
         <a href="gallery.html">照片墙</a>
         <a href="video.html">视频</a>
         <a href="notes.html">留言板</a>
+        <a href="#"><strong>♂ 退出♂</strong></a>
     </nav>
 
     <div class="message-board">
@@ -102,21 +112,21 @@
     </div>
 
     <script>
-        // 从 localStorage 中加载留言
-        function loadMessages() {
-            const messages = JSON.parse(localStorage.getItem('messages')) || [];
+        // 从 Firebase 加载留言
+        messagesRef.on('value', (snapshot) => {
             const messagesContainer = document.getElementById('messages');
-            messages.forEach((msg, index) => {
+            messagesContainer.innerHTML = '';
+            snapshot.forEach((childSnapshot) => {
+                const msg = childSnapshot.val();
                 const messageElement = document.createElement('div');
                 messageElement.className = 'message';
                 messageElement.innerHTML = `
-                    <p><strong>${msg.name || '匿名'}</strong> 在 ${new Date(msg.timestamp).toLocaleString()} 说：</p>
+                    <p><strong>${msg.name || '匿名'}</strong> 在 ${msg.timestamp} 说：</p>
                     <p>${msg.content}</p>
-                    <button class="delete-button" onclick="deleteMessage(${index})">删除</button>
                 `;
                 messagesContainer.appendChild(messageElement);
             });
-        }
+        });
 
         // 添加留言
         function addMessage() {
@@ -124,36 +134,6 @@
             const content = document.getElementById('content').value;
             if (content.trim() === '') return;
 
-            const messages = JSON.parse(localStorage.getItem('messages')) || [];
-            messages.push({
+            messagesRef.push({
                 name: name,
-                content: content,
-                timestamp: new Date().toISOString()
-            });
-            localStorage.setItem('messages', JSON.stringify(messages));
-
-            // 清空输入框
-            document.getElementById('name').value = '';
-            document.getElementById('content').value = '';
-
-            // 重新加载留言
-            const messagesContainer = document.getElementById('messages');
-            messagesContainer.innerHTML = '';
-            loadMessages();
-        }
-
-        // 删除留言
-        function deleteMessage(index) {
-            const messages = JSON.parse(localStorage.getItem('messages')) || [];
-            if (index >= 0 && index < messages.length) {
-                messages.splice(index, 1);
-                localStorage.setItem('messages', JSON.stringify(messages));
-                loadMessages();
-            }
-        }
-
-        // 页面加载时加载留言
-        document.addEventListener('DOMContentLoaded', loadMessages);
-    </script>
-</body>
-</html>
+                content: content
