--- a/gallery.html
+++ b/gallery.html
@@ -110,7 +110,7 @@
         <img src="https://raw.githubusercontent.com/fandunjin/zhaojin/main/e923d73f29891176c4b5501b73c9050.jpg">
         <img src="https://raw.githubusercontent.com/fandunjin/zhaojin/main/ecf311a42d5f19927e2fd1deb215a3f.jpg">
         <img src="https://raw.githubusercontent.com/fandunjin/zhaojin/main/ed8c2d342433a4a70f101096ffd0739.jpg">
-        <img src="https://raw.githubusercontent.com/fandunjin/zhaojin/main/5541b2dc5e3bba9b6c33ee2117e077a.jpg>
+        <img src="https://raw.githubusercontent.com/fandunjin/zhaojin/main/5541b2dc5e3bba9b6c33ee2117e077a.jpg">
     </div>
 </body>
 </html>
