--- a/notes.html
+++ b/notes.html
@@ -94,11 +94,10 @@
 <body>
     <!-- Navigation Bar -->
     <nav class="nav">
-        <a href="index.html">首页</a>
-        <a href="gallery.html">照片墙</a>
-        <a href="video.html">视频</a>
-        <a href="notes.html">留言板</a>
-        <a href="#"><strong>♂ 退出♂</strong></a>
+        <a href="index.html">Home Page</a>
+        <a href="gallery.html">photo</a>
+        <a href="video.html">video</a>
+        <a href="notes.html">我爱你</a>
     </nav>
 
     <div class="message-board">
