--- a/login.html
+++ b/login.html
@@ -60,7 +60,7 @@
 <body>
     <div class="login-form">
         <p>我们的生日：</p>
-        <input id="birthday" type="text" placeholder="0228">
+        <input id="birthday" type="text" placeholder="">
         <button onclick="handleLogin()">登录</button>
     </div>
 
