--- a/index.html
+++ b/index.html
@@ -295,10 +295,9 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>我爱你</p>
-                <p>赵瑾，我想给你满满的安全感，我想给你所有的一切</p>
-                <p>请你相信我</p>
-                <p>我爱你</p>
+                <p>明天就是情人节了</p>
+                <p>不知道赵瑾会给我什么惊喜嘿嘿</p>
+                <p>爱赵瑾</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
         </div>
