--- a/index.html
+++ b/index.html
@@ -295,9 +295,12 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>明天就是情人节了</p>
-                <p>不知道赵瑾会给我什么惊喜嘿嘿</p>
-                <p>爱赵瑾</p>
+                <p>情人节快乐宝贝</p>
+                <p>真是讨厌异地，没办法一起过节</p>
+                <p>想和你一起看电影，一起逛街，一起吃蛋糕，一起睡觉嘿嘿</p>
+                <p>不过没关系，因为我们马上就要见面啦</p>
+                <p>情人节快乐宝贝</p>
+                <p>想你，爱你</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
         </div>
