--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>爱赵瑾</title>
+    <title>爱的小网站</title>
     <style>
         :root {
             --primary-color: #ffd700;
@@ -295,12 +295,8 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>情人节快乐宝贝</p>
-                <p>真是讨厌异地，没办法一起过节</p>
-                <p>想和你一起看电影，一起逛街，一起吃蛋糕，一起睡觉嘿嘿</p>
-                <p>不过没关系，因为我们马上就要见面啦</p>
-                <p>情人节快乐宝贝</p>
-                <p>想你，爱你</p>
+                <p>明天，明天！</p>
+                <p>结束异地！</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
         </div>
