--- a/index.html
+++ b/index.html
@@ -295,8 +295,11 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>明天，明天！</p>
-                <p>结束异地！</p>
+                <p>寒假结束啦，赵瑾又要大半夜起床赶飞机</p>
+                <p>又要离开温暖的家了，真的好辛苦</p>
+                <p>不过没关系，有我的保驾护航！</p>
+                <p>保你在新的学期</p>
+                <p>心想事成，万事顺遂！</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
         </div>
