--- a/index.html
+++ b/index.html
@@ -295,11 +295,13 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>寒假结束啦，赵瑾又要大半夜起床赶飞机</p>
-                <p>又要离开温暖的家了，真的好辛苦</p>
-                <p>不过没关系，有我的保驾护航！</p>
-                <p>保你在新的学期</p>
-                <p>心想事成，万事顺遂！</p>
+                <p>这两天真开心</p>
+                <p>和我的赵瑾聊了好多好多</p>
+                <p>很奇怪</p>
+                <p>我之前似乎没有这么多话</p>
+                <p>但是现在，我什么都想和你说</p>
+                <p>千言万语，总结一下</p>
+                <p>“爱你”</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
         </div>
