--- a/index.html
+++ b/index.html
@@ -295,13 +295,11 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>这两天真开心</p>
-                <p>和我的赵瑾聊了好多好多</p>
-                <p>很奇怪</p>
-                <p>我之前似乎没有这么多话</p>
-                <p>但是现在，我什么都想和你说</p>
-                <p>千言万语，总结一下</p>
-                <p>“爱你”</p>
+                <p>早上好呀</p>
+                <p>最近病毒猖獗</p>
+                <p>出门一定要戴好口罩</p>
+                <p>千万别感冒中招啦</p>
+                <p>爱你</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
         </div>
