--- a/index.html
+++ b/index.html
@@ -295,11 +295,8 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>早上好呀</p>
-                <p>最近病毒猖獗</p>
-                <p>出门一定要戴好口罩</p>
-                <p>千万别感冒中招啦</p>
-                <p>爱你</p>
+                <p>喜欢周四</p>
+                <p>因为今天赵瑾没课</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
         </div>
