--- a/index.html
+++ b/index.html
@@ -295,8 +295,10 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>喜欢周四</p>
-                <p>因为今天赵瑾没课</p>
+                <p>经过一番严密的讨论</p>
+                <p>我和赵瑾决定</p>
+                <p>要培养一个优秀努力上进全能的娃！</p>
+                <p>真期待呀，十年后的样子</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
         </div>
