--- a/index.html
+++ b/index.html
@@ -295,10 +295,13 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>今天和赵瑾来研讨会开会了</p>
-                <p>十几个人，好夸张</p>
-                <p>但是赵瑾很厉害，游刃有余</p>
-                <p>很优秀！真的很棒！</p>
+                <p>ε=(´ο｀*)))错过520了</p>
+                <p>虽然我们都忘了</p>
+                <p>但很巧的是我们还是在一起呆了一天</p>
+                <p>很奇特的520</p>
+                <p>而且最后还是吃了我们的520蛋糕</p>
+                <p>忘记了，但什么都没少</p>
+                <p>爱你</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
         </div>
