--- a/index.html
+++ b/index.html
@@ -295,13 +295,8 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>ε=(´ο｀*)))错过520了</p>
-                <p>虽然我们都忘了</p>
-                <p>但很巧的是我们还是在一起呆了一天</p>
-                <p>很奇特的520</p>
-                <p>而且最后还是吃了我们的520蛋糕</p>
-                <p>忘记了，但什么都没少</p>
-                <p>爱你</p>
+                <p>今天和赵瑾一天都呆在图书馆</p>
+                <p>真是爱读书的一对小情侣</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
         </div>
