--- a/index.html
+++ b/index.html
@@ -295,8 +295,16 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>今天和赵瑾一天都呆在图书馆</p>
-                <p>真是爱读书的一对小情侣</p>
+                <p>今天是范敦锦的农历生日</p>
+                <p>请祝我生日快乐</p>
+                <p>
+     iiiiiiiiii
+   |:H:a:p:p:y:|
+ __|___________|__
+|^^^^^^^^^^^^^^^^^|
+|:B:i:r:t:h:d:a:y:|
+|                 |    
+~~~~~~~~~~~~~~~~~~~ </p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
         </div>
