--- a/index.html
+++ b/index.html
@@ -297,14 +297,12 @@
                 <h2>❤️ LOVE YOU ❤️</h2>
                 <p>今天是范敦锦的农历生日</p>
                 <p>请祝我生日快乐</p>
-                <p>
-     iiiiiiiiii
-   |:H:a:p:p:y:|
- __|___________|__
-|^^^^^^^^^^^^^^^^^|
-|:B:i:r:t:h:d:a:y:|
-|                 |    
-~~~~~~~~~~~~~~~~~~~ </p>
+                <p>iiiiiiiiii</p>
+                <p>|:H:a:p:p:y:|</p>
+                <p>__|___________|__</p>
+                <p>|^^^^^^^^^^^^^^^^^|</p>
+                <p>|:B:i:r:t:h:d:a:y:|</p>
+                <p>~~~~~~~~~~~~~~~~~~~ </p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
         </div>
