--- a/index.html
+++ b/index.html
@@ -295,14 +295,17 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>今天是范敦锦的农历生日</p>
-                <p>请祝我生日快乐</p>
-                <p>iiiiiiiiii</p>
-                <p>|:H:a:p:p:y:|</p>
-                <p>__|___________|__</p>
-                <p>|^^^^^^^^^^^^^^^^^|</p>
-                <p>|:B:i:r:t:h:d:a:y:|</p>
-                <p>~~~~~~~~~~~~~~~~~~~ </p>
+                <p>本来我对今天农历生日是无感的</p>
+                <p>但是一起床发现爸妈又是发了祝福又是发了红包</p>
+                <p>突然这一天就被赋予了他的意义</p>
+                <p>很难描述的感觉，很温暖，很感动，但又很沉重</p>
+                <p>有一种被赐予了使命的自觉</p>
+                <p>令我对这一天十分看重</p>
+                <p>接着我立马就想到了身边最亲爱的人</p>
+                <p>想得到你的祝福，想拥有你的陪伴，想和你一起度过这一天</p>
+                <p>这是我第一次吃到除父母之外的生日蛋糕</p>
+                <p>很惊喜，无与伦比</p>
+                <p>我爱你，至死不渝</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
         </div>
