--- a/index.html
+++ b/index.html
@@ -295,11 +295,11 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>明天和赵瑾去吃朱富贵</p>
-                <p>吃大餐的</p>
-                <p>良辰吉日</p>
-                <p>灰灰</p>
-                <p>爱赵瑾，赵瑾是最棒的！</p>
+                <p>果然是良辰吉日</p>
+                <p>今天好充实</p>
+                <p>二月二十八号啦</p>
+                <p>祝我们生日快乐</p>
+                <p>爱你</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
         </div>
