--- a/index.html
+++ b/index.html
@@ -295,11 +295,11 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>果然是良辰吉日</p>
-                <p>今天好充实</p>
-                <p>二月二十八号啦</p>
-                <p>祝我们生日快乐</p>
-                <p>爱你</p>
+                <p>七星连线</p>
+                <p>许愿</p>
+                <p>愿我的亲人，我的赵瑾，我的赵瑾的亲人，我和赵瑾身边所有的亲朋好友</p>
+                <p>健健康康，平平安安！</p>
+                <p>顺顺利利，万事如意！</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
         </div>
