--- a/index.html
+++ b/index.html
@@ -295,11 +295,11 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>七星连线</p>
-                <p>许愿</p>
-                <p>愿我的亲人，我的赵瑾，我的赵瑾的亲人，我和赵瑾身边所有的亲朋好友</p>
-                <p>健健康康，平平安安！</p>
-                <p>顺顺利利，万事如意！</p>
+                <p>又是辛苦干活的一天</p>
+                <p>加油鸭</p>
+                <p>Business is Business</p>
+                <p>不要为此感到内疚</p>
+                <p>爱你</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
         </div>
