--- a/index.html
+++ b/index.html
@@ -295,11 +295,12 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>又是辛苦干活的一天</p>
-                <p>加油鸭</p>
-                <p>Business is Business</p>
-                <p>不要为此感到内疚</p>
-                <p>爱你</p>
+                <p>明天我要睡到自然醒</p>
+                <p>我的宝宝别叫我</p>
+                <p>因为我要睡大觉</p>
+                <p>睡呀睡呀起床来</p>
+                <p>醒了继续赖会床</p>
+                <p>然后再去干干活</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
         </div>
