--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>明天我要睡到自然醒</p>
+                <p>明天我要自然醒</p>
                 <p>我的宝宝别叫我</p>
                 <p>因为我要睡大觉</p>
                 <p>睡呀睡呀起床来</p>
