--- a/index.html
+++ b/index.html
@@ -295,12 +295,10 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>明天我要自然醒</p>
-                <p>我的宝宝别叫我</p>
-                <p>因为我要睡大觉</p>
-                <p>睡呀睡呀起床来</p>
-                <p>醒了继续赖会床</p>
-                <p>然后再去干干活</p>
+                <p>三月的烟雨</p>
+                <p>飘摇的南方</p>
+                <p>爱人</p>
+                <p>你可感到明天已经来临？</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
         </div>
