--- a/index.html
+++ b/index.html
@@ -295,10 +295,15 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>三月的烟雨</p>
-                <p>飘摇的南方</p>
-                <p>爱人</p>
-                <p>你可感到明天已经来临？</p>
+                <p>我不喜欢那种</p>
+                <p>在心里重复了无数次的事情</p>
+                <p>发生变化</p>
+                <p>当这种始料不及</p>
+                <p>打破幻想发生时</p>
+                <p>我会无措，我会紧张</p>
+                <p>但有你在身边</p>
+                <p>一切问题都变的</p>
+                <p>温柔可爱，迎刃可解</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
         </div>
