--- a/index.html
+++ b/index.html
@@ -295,15 +295,14 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>我不喜欢那种</p>
-                <p>在心里重复了无数次的事情</p>
-                <p>发生变化</p>
-                <p>当这种始料不及</p>
-                <p>打破幻想发生时</p>
-                <p>我会无措，我会紧张</p>
-                <p>但有你在身边</p>
-                <p>一切问题都变的</p>
-                <p>温柔可爱，迎刃可解</p>
+                <p>赵瑾有好多希望</p>
+                <p>她希望锦锦可以在一点前睡觉</p>
+                <p>她也希望瑾瑾可以减肥成功</p>
+                <p>她还希望再也买不到烂芒果</p>
+                <p>她再希望明天的实验顺利结果好</p>
+                <p>她又希望明天别下雨影响我们的约会</p>
+                <p>最后她希望不要感冒不要鼻塞</p>
+                <p>和草根会带来好消息。</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
         </div>
