--- a/index.html
+++ b/index.html
@@ -295,14 +295,14 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>赵瑾有好多希望</p>
-                <p>她希望锦锦可以在一点前睡觉</p>
-                <p>她也希望瑾瑾可以减肥成功</p>
-                <p>她还希望再也买不到烂芒果</p>
-                <p>她再希望明天的实验顺利结果好</p>
-                <p>她又希望明天别下雨影响我们的约会</p>
-                <p>最后她希望不要感冒不要鼻塞</p>
-                <p>和草根会带来好消息。</p>
+                <p>锦锦答应瑾瑾</p>
+                <p>锦锦会努力在一点前睡觉</p>
+                <p>锦锦和瑾瑾一起减肥成功</p>
+                <p>锦锦再也不会让瑾瑾烂芒果</p>
+                <p>锦锦和瑾瑾一起顺利的完成了实验</p>
+                <p>草根也带来了好消息。</p>
+                <p>但锦锦也希望瑾瑾不要感冒不要鼻塞</p>
+                <p>希望瑾瑾睡一觉起来就没事</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
         </div>
