--- a/index.html
+++ b/index.html
@@ -295,14 +295,11 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>锦锦答应瑾瑾</p>
-                <p>锦锦会努力在一点前睡觉</p>
-                <p>锦锦和瑾瑾一起减肥成功</p>
-                <p>锦锦再也不会让瑾瑾烂芒果</p>
-                <p>锦锦和瑾瑾一起顺利的完成了实验</p>
-                <p>草根也带来了好消息。</p>
-                <p>但锦锦也希望瑾瑾不要感冒不要鼻塞</p>
-                <p>希望瑾瑾睡一觉起来就没事</p>
+                <p>今天男孩要赴女孩的约</p>
+                <p>呆呆站在镜子前</p>
+                <p>将胡子头发打理成大人摸样</p>
+                <p>穿上一身帅气穿搭</p>
+                <p>等会见你一定很美</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
         </div>
