--- a/index.html
+++ b/index.html
@@ -295,11 +295,11 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>今天男孩要赴女孩的约</p>
-                <p>呆呆站在镜子前</p>
-                <p>将胡子头发打理成大人摸样</p>
-                <p>穿上一身帅气穿搭</p>
-                <p>等会见你一定很美</p>
+                <p>赵瑾又长大一岁咯</p>
+                <p>希望赵瑾在新的一岁里</p>
+                <p>越来越美。越来越好</p>
+                <p>心想事成，万事如意</p>
+                <p>爱你</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
         </div>
