--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>来自赵瑾党的投稿：</p>
+                <p>来自赵瑾的投稿：</p>
                 <p>今天和敦敦吃了卤味</p>
                 <p>但是我不开心</p>
                 <p>因为要变胖了</p>
