--- a/index.html
+++ b/index.html
@@ -295,17 +295,13 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>来自赵瑾的投稿：</p>
-                <p>今天和敦敦吃了卤味</p>
-                <p>但是我不开心</p>
-                <p>因为要变胖了</p>
-                <p>变胖了拍照就会不好看</p>
-                <p>然后就会和敦敦生气</p>
-                <p>不和我嘴嘴亲亲</p>
-                <p>然后我就更不开心了┭┮﹏┭┮</p>
-                <p>但是今天敦敦还是给我拍了好看的照片</p>
-                <p>我决定不生气了</p>
-                <p>爱敦敦</p>
+                <p>当遇到问题时</p>
+                <p>请你不要着急</p>
+                <p>不要焦虑</p>
+                <p>我在你的身边</p>
+                <p>我们一起面对</p>
+                <p>一起解决</p>
+                <p>爱你</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
         </div>
