--- a/index.html
+++ b/index.html
@@ -295,13 +295,9 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>当遇到问题时</p>
-                <p>请你不要着急</p>
-                <p>不要焦虑</p>
-                <p>我在你的身边</p>
-                <p>我们一起面对</p>
-                <p>一起解决</p>
-                <p>爱你</p>
+                <p>天对地</p>
+                <p>风对雨</p>
+                <p>赵瑾配敦锦</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
         </div>
