--- a/index.html
+++ b/index.html
@@ -295,9 +295,14 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>天对地</p>
-                <p>风对雨</p>
-                <p>赵瑾配敦锦</p>
+                <p>这几天赵瑾很粘我</p>
+                <p>我们一起散了很多的步</p>
+                <p>绕了很多圈操场</p>
+                <p>可一起走的路越多</p>
+                <p>好像离分开就越来越近</p>
+                <p>我不想谈论离别</p>
+                <p>因为三个月很短，不够我们相离</p>
+                <p>但一生很长，足够我们相爱</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
         </div>
