--- a/index.html
+++ b/index.html
@@ -295,14 +295,10 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>赵瑾昨天晚上偷偷吃了关东煮</p>
-                <p>因为怕我说她所以没告诉我</p>
-                <p>她还说喜欢叫我敦敦</p>
-                <p>是因为我是墩墩的敦敦</p>
-                <p>哼哼</p>
-                <p>不管赵瑾偷吃了什么</p>
-                <p>我都不会说她的</p>
-                <p>因为我爱她</p>
+                <p>今天回厦门了</p>
+                <p>舍不得赵瑾</p>
+                <p>后天就回去找她</p>
+                <p>短暂的分离呀</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
         </div>
