--- a/index.html
+++ b/index.html
@@ -295,10 +295,12 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>今天回厦门了</p>
-                <p>舍不得赵瑾</p>
-                <p>后天就回去找她</p>
-                <p>短暂的分离呀</p>
+                <p>亲爱的赵瑾：</p>
+                <p>展信佳，</p>
+                <p>明天我就回来了</p>
+                <p>不知该如何表达我的思念</p>
+                <p>不知该如何表达我的爱意</p>
+                <p>我想你</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
         </div>
