--- a/index.html
+++ b/index.html
@@ -295,12 +295,11 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>亲爱的赵瑾：</p>
-                <p>展信佳，</p>
-                <p>明天我就回来了</p>
-                <p>不知该如何表达我的思念</p>
-                <p>不知该如何表达我的爱意</p>
-                <p>我想你</p>
+                <p>亲爱的宝宝</p>
+                <p>早上好</p>
+                <p>中午一起吃饭吗？</p>
+                <p>可以的话</p>
+                <p>微信联系我</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
         </div>
