--- a/index.html
+++ b/index.html
@@ -295,22 +295,16 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>今天和胖胖去健身房</p>
-                <p>我们练了好多项目</p>
-                <p>第一个做的是深蹲，就是练屁股的那个</p>
-                <p>我们是反过来做的</p>
-                <p>第二个我们去做的推背，这个是最累的</p>
-                <p>三组直接就做到力竭了</p>
-                <p>第三个是肱二头肌，就是小老鼠嘿嘿</p>
-                <p>同时还去练了腿，胖胖就是在调这个的时候夹到了手</p>
-                <p>然后第四个是躺着推的那个，也是练腿的</p>
-                <p>就在上次给赵瑾拍美照的地方，想她</p>
-                <p>最后我们去练了肱三头肌，就是从上往下拉的</p>
-                <p>练到这我就已经没力气了，一用力就发软</p>
-                <p>努力努力冲冲冲！</p>
-                <p>晚上和赵瑾散步了</p>
-                <p>真不想和赵瑾分开，只要和瑾瑾在一起我就开心</p>
-                <p>有赵瑾真好</p>
+                <p>最近真的好辛苦呀</p>
+                <p>做了好多的工作</p>
+                <p>画了好多的图</p>
+                <p>也开始了健身</p>
+                <p>还要天天看我心心念念的电脑</p>
+                <p>但是也收获了好多</p>
+                <p>赚到了钱，练到了身材</p>
+                <p>最重要的是</p>
+                <p>赵瑾陪在我的身边</p>
+                <p>爱她</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
         </div>
