--- a/index.html
+++ b/index.html
@@ -295,16 +295,10 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>最近真的好辛苦呀</p>
-                <p>做了好多的工作</p>
-                <p>画了好多的图</p>
-                <p>也开始了健身</p>
-                <p>还要天天看我心心念念的电脑</p>
-                <p>但是也收获了好多</p>
-                <p>赚到了钱，练到了身材</p>
-                <p>最重要的是</p>
-                <p>赵瑾陪在我的身边</p>
-                <p>爱她</p>
+                <p>以后再也不和赵瑾冷战了</p>
+                <p>会浪费好多的时间</p>
+                <p>我们要好好的解决问题</p>
+                <p>要好好的爱对方</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
         </div>
