--- a/index.html
+++ b/index.html
@@ -295,23 +295,12 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>今天和赵瑾约会啦</p>
-                <p>赵瑾画了美美的妆</p>
-                <p>我也美美的理了胡子</p>
-                <p>中午吃了大餐！</p>
-                <p>好像是我们吃的第二贵的东西了</p>
-                <p>真的很不错</p>
-                <p>首先环境就很好</p>
-                <p>牛排真的No.1</p>
-                <p>很满意，花得值</p>
-                <p>然后我们又去做了戒指</p>
-                <p>这次做的戒指也很不错</p>
-                <p>很重，很好看，效果很好</p>
-                <p>但是大头贴有点不足人意</p>
-                <p>可拍立得很不错！</p>
-                <p>总的来说</p>
-                <p>今天的约会很开心</p>
-                <p>爱赵瑾</p>
+                <p>赵瑾真的好棒</p>
+                <p>一个人面对800大关</p>
+                <p>承受着巨大的压力</p>
+                <p>挺下了所有！</p>
+                <p>真是让人忍不住想夸夸</p>
+                <p>真是优秀的仙女宝宝</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
         </div>
