--- a/index.html
+++ b/index.html
@@ -295,12 +295,19 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>赵瑾真的好棒</p>
-                <p>一个人面对800大关</p>
-                <p>承受着巨大的压力</p>
-                <p>挺下了所有！</p>
-                <p>真是让人忍不住想夸夸</p>
-                <p>真是优秀的仙女宝宝</p>
+                <p>见到赵瑾的第一面</p>
+                <p>我便知道</p>
+                <p>赵瑾定是我的月亮</p>
+                <p>往后的时时刻刻里</p>
+                <p>月光也的确照耀着我</p>
+                <p>生活就像电影一般</p>
+                <p>我勇敢的牵起她的手</p>
+                <p>我抓的很紧，抓了很久</p>
+                <p>我们的故事像蒲公英似得散开</p>
+                <p>飘进我手心，散在我心头</p>
+                <p>到处啊</p>
+                <p>都是我们的模样</p>
+                <p>和爱意</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
         </div>
