--- a/index.html
+++ b/index.html
@@ -295,19 +295,20 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>见到赵瑾的第一面</p>
-                <p>我便知道</p>
-                <p>赵瑾定是我的月亮</p>
-                <p>往后的时时刻刻里</p>
-                <p>月光也的确照耀着我</p>
-                <p>生活就像电影一般</p>
-                <p>我勇敢的牵起她的手</p>
-                <p>我抓的很紧，抓了很久</p>
-                <p>我们的故事像蒲公英似得散开</p>
-                <p>飘进我手心，散在我心头</p>
-                <p>到处啊</p>
-                <p>都是我们的模样</p>
-                <p>和爱意</p>
+                <p>什么时候举办我和赵瑾的婚礼呢</p>
+                <p>如果是研究生毕业</p>
+                <p>我们会说五年相恋，走入婚姻</p>
+                <p>我们会请导师和同门、同学和朋友，当然还有家人亲戚</p>
+                <p>如果是博士毕业</p>
+                <p>我们会说八年常伴，终成眷属</p>
+                <p>我们会请更多的导师和同门、同学和朋友，当然还有家人亲戚</p>
+                <p>若是更久之后</p>
+                <p>我们会说什么呢</p>
+                <p>想不出来，无法言喻</p>
+                <p>但我们一定会办一场空前盛大的婚礼</p>
+                <p>会有无数的陪我们走过这段时间的人们</p>
+                <p>一起见证</p>
+                <p>我们的爱情</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
         </div>
