--- a/index.html
+++ b/index.html
@@ -295,20 +295,11 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>什么时候举办我和赵瑾的婚礼呢</p>
-                <p>如果是研究生毕业</p>
-                <p>我们会说五年相恋，走入婚姻</p>
-                <p>我们会请导师和同门、同学和朋友，当然还有家人亲戚</p>
-                <p>如果是博士毕业</p>
-                <p>我们会说八年常伴，终成眷属</p>
-                <p>我们会请更多的导师和同门、同学和朋友，当然还有家人亲戚</p>
-                <p>若是更久之后</p>
-                <p>我们会说什么呢</p>
-                <p>想不出来，无法言喻</p>
-                <p>但我们一定会办一场空前盛大的婚礼</p>
-                <p>会有无数的陪我们走过这段时间的人们</p>
-                <p>一起见证</p>
-                <p>我们的爱情</p>
+                <p>这两天回去</p>
+                <p>胖了</p>
+                <p>为什么会胖呢</p>
+                <p>原来是对赵瑾的思念</p>
+                <p>沉甸甸的</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
         </div>
